--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -176,77 +176,59 @@
     }
   }
 </style>
+@if(username.length > 0)
+{
+  <mat-toolbar color="primary" >
+    <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu" >
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>Simetrica Consulting | {{ username }}</span>
+    <span class="toolbar-item-spacer"></span>
+    <button mat-icon-button matTooltip="Like">
+        <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+        <mat-icon>account_circle</mat-icon>
+    </button>
+    <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+        <button mat-menu-item routerLink="#">
+            <mat-icon>person</mat-icon><span>Mi cuenta</span>
+        </button>
+        <button mat-menu-item routerLink="#">
+            <mat-icon>settings</mat-icon><span>Configuracion</span>
+        </button>
+        <button mat-menu-item routerLink="#">
+            <mat-icon>help</mat-icon><span>Ayuda</span>
+        </button>
+        <mat-divider></mat-divider>
+        <button mat-menu-item routerLink="#">
+            <mat-icon>exit_to_app</mat-icon>Cerrar sesion
+        </button>
+    </mat-menu>
+  </mat-toolbar>
+}
 
-<mat-toolbar color="primary">
-  <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
-      <mat-icon>menu</mat-icon>
-  </button>
-  <span>Simetrica Consulting</span>
-  <span class="toolbar-item-spacer"></span>
-  <button mat-icon-button matTooltip="Like">
-      <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
-      <mat-icon>account_circle</mat-icon>
-  </button>
-  <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-      <button mat-menu-item routerLink="#">
-          <mat-icon>person</mat-icon><span>Mi cuenta</span>
-      </button>
-      <button mat-menu-item routerLink="#">
-          <mat-icon>settings</mat-icon><span>Configuracion</span>
-      </button>
-      <button mat-menu-item routerLink="#">
-          <mat-icon>help</mat-icon><span>Ayuda</span>
-      </button>
-      <mat-divider></mat-divider>
-      <button mat-menu-item routerLink="#">
-          <mat-icon>exit_to_app</mat-icon>Cerrar sesion
-      </button>
-  </mat-menu>
-</mat-toolbar>
+
 
 <mat-sidenav-container class="app-container">
-  <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+  <mat-sidenav #sidenav mode="over" [class.mat-elevation-z4]="true" class="app-sidenav">
       <mat-nav-list>
-          <mat-list-item routerLink="#">
+          <mat-list-item routerLink="dashboard" (click)="sidenav.toggle()">
               <!-- <mat-icon color="white">dashboard</mat-icon> -->
               <span class="mytext">Dashboard</span>
           </mat-list-item>
-          <mat-nav-list>
-            <a mat-list-item routerLink="#"><span class="mytext">Tareas</span></a>
+          <mat-nav-list (click)="sidenav.toggle()">
+            <a mat-list-item routerLink="tareas"><span class="mytext">Tareas</span></a>
         </mat-nav-list>
          
       </mat-nav-list>
   </mat-sidenav>
  
   <mat-sidenav-content>
-    <router-outlet>
+    <router-outlet >
       <div>
         
       </div>
     </router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container> 
-
-
-
-
-<!-- <main class="main">
-  <mat-toolbar> Responsive side navigation </mat-toolbar>
-
-<mat-sidenav-container>
-  <mat-sidenav> </mat-sidenav>
-  <mat-sidenav-content>
-    <div class="content mat-elevation-z8">Main content here!</div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
-  <nav>
-    <ul>
-      <li><a routerLink="login" routerLinkActive="active">First Component</a></li>
-      <li><a routerLink="dashboard" routerLinkActive="active">Second Component</a></li>
-    </ul>
-  </nav>
-  <router-outlet />
-</main> -->
-
