--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,14 @@
-<p>login works!</p>
-a
-a
-<a href="a"></a>
+<div class="container">
+    <p class="login-box">
+        <label>Usuario:</label>
+        <mat-form-field appearance="outline">
+          <input matInput type="text" [(ngModel)]="user">
+        </mat-form-field>
+        <label>Clave:</label>
+        <mat-form-field appearance="outline">
+            <input matInput type="password" [(ngModel)]="pass">
+          </mat-form-field>
+        <button mat-stroked-button class="send-btn" (click)="login()">Iniciar Sesion</button>
+      </p>
+      
+</div>
